--- a/ansible-examples-master/lamp_simple/site.yml
+++ b/ansible-examples-master/lamp_simple/site.yml
@@ -3,21 +3,21 @@
 
 - name: apply common configuration to all nodes
   hosts: all
-  remote_user: root
+  become: true
 
   roles:
     - common
 
 - name: configure and deploy the webservers and application code
-  hosts: webservers
-  remote_user: root
+  hosts: web
+  become: true
 
   roles:
     - web
 
 - name: deploy MySQL and configure the databases
-  hosts: dbservers
-  remote_user: root
+  hosts: web
+  become: true
 
   roles:
     - db
