--- a/ansible-examples-master/lamp_simple/roles/web/tasks/install_httpd.yml
+++ b/ansible-examples-master/lamp_simple/roles/web/tasks/install_httpd.yml
@@ -4,7 +4,7 @@
 - name: Install http and php etc
   yum:
     name: "{{ item }}"
-    state: present
+    state: absent
   with_items:
    - httpd
    - php
